feat: add certificate patch request
